Remove white border around boxes (Q&D fix, should be removed and horizontal spacings recalculated)

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -94,7 +94,7 @@ h1 {
     border-left: 4px solid #e3e3db;
 }
 .box__inner {
-    border: 2px solid rgba(255, 255, 255, .5);
+    border: 2px solid #EFEFE7;
 }
 .box__header {
     padding: 4px 6px;
@@ -141,7 +141,7 @@ h1 {
 .aside {
     display: none;
     background-color: #EFEFE7;
-    border: 2px solid rgba(255, 255, 255, .25);
+    border: 2px solid #EFEFE7;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
